Fix bug #26443: No errror reporting for Errors in the domxml extension